<resources>
    <string name="app_name">Dicoding Story</string>

    <string name="error">Unexpected error occurred</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau berbagi cerita hari ini?</string>
    <string name="title_welcome_page">Selamat datang di Dicoding Story!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk berbagi cerita?</string>
    <string name="name">Nama</string>
    <string name="logout">Keluar</string>
    <string name="add_new_story">Add New Story</string>
    <string name="username">username</string>
    <string name="photo">story photo\n</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="story_detail">Story Detail</string>
    <string name="registering">Sedang mandaftarkan…</string>
    <string name="loading">Loading…</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="retry">Coba lagi</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>